--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ pandas==2.2.2
 pillow==10.4.0
 posthog==3.5.0
 protobuf==4.25.3
+psycopg2-binary==2.9.9
 pyarrow==16.1.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
