--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ chroma-hnswlib==0.7.5
 chromadb==0.5.4
 click==8.1.7
 coloredlogs==15.0.1
+contourpy==1.2.1
+cycler==0.12.1
 dataclasses-json==0.6.7
 Deprecated==1.2.14
 distro==1.9.0
@@ -29,6 +31,7 @@ fastapi==0.111.1
 fastapi-cli==0.0.4
 filelock==3.15.4
 flatbuffers==24.3.25
+fonttools==4.53.1
 frozenlist==1.4.1
 fsspec==2024.6.1
 gitdb==4.0.11
@@ -52,10 +55,12 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 kubernetes==30.1.0
-langchain==0.2.10
-langchain-community==0.2.9
-langchain-core==0.2.22
+langchain==0.2.12
+langchain-community==0.2.11
+langchain-core==0.2.28
+langchain-experimental==0.0.64
 langchain-openai==0.1.17
 langchain-text-splitters==0.2.2
 langchainhub==0.1.20
@@ -65,6 +70,7 @@ loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
+matplotlib==3.9.0
 mdurl==0.1.2
 mmh3==4.1.0
 monotonic==1.6
@@ -101,6 +107,7 @@ pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
 PyJWT==2.8.0
+pyparsing==3.1.2
 PyPika==0.48.9
 pyproject_hooks==1.1.0
 pyreqwest_impersonate==0.4.9
